Updating my about page, fixing some styling, and fixed a bug with the background not extending when overflows start occuring

--- a/src/app/about/about.component.scss
+++ b/src/app/about/about.component.scss
@@ -5,6 +5,9 @@
 .selfie{
     height: 400px;
 }
+p {
+    white-space: pre-wrap;
+}
 
 img{
     margin-bottom: 50px;
@@ -15,6 +18,5 @@ img{
 }
 
 .inner-about-text p{
-    margin-left: 40px;
-    font-size: 20px;
+    font-size: 25px;
 }
